<resources>
    <string name="app_name">PangTourista</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wlc_sign_in">Input a new password</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="google_maps_key">AIzaSyBjtooR3Qupe7jk6jyNw9aaYaP2o1B_vPg</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="agreementToTerm">These Terms and Conditions constitute a legally binding agreement between you, whether as an individual or on behalf of an entity, and Pangasinan Provincial Tourism. This agreement pertains to your access to and use of our mobile application, PangTourista. By accessing the application, you acknowledge that you have read, understood, and agreed to comply with all of these Terms and Conditions of Use. If you do not agree with all of these terms and conditions, you are expressly prohibited from using the application, and you must discontinue your use immediately.</string>
    <string name="basicTerm">1.1 Age Requirement: The Application is intended for users who are at least 13 years old. If you are under the age of 13, you must obtain explicit permission from your parent or guardian and use the Application under their direct supervision. As a minor, it is your responsibility to ensure that your parent or guardian has read and agreed to these Terms of Use on your behalf before using the Application.</string>
    <string name="userRepresentations">By using the Application, you represent and warrant that all registration information you submit is true, accurate, current, and complete. You agree to maintain the accuracy of this information and promptly update it as necessary. You confirm that you possess the legal capacity and agree to comply with these Terms of Use. Furthermore, you assert that you are not under the age of 13, or if you are a minor in your jurisdiction, you have obtained parental permission to use the Site. You also agree not to access the Application through automated or non-human means, such as bots, scripts, or other mechanisms. You will refrain from using the Application for any illegal or unauthorized purposes. Finally, you pledge that your use of the Application will not violate any applicable regulations. Please note that if you provide any information that is untrue, inaccurate, not current, or incomplete, we reserve the right to suspend or terminate your account and refuse any and all current or future use of the Application (or any portion thereof).</string>
    <string name="userRegistration">You may be required to register with the Application. You agree to keep your password confidential and will be responsible for all use of your account and password.</string>
    <string name="modificationsAndInterruptions">We reserve the right to change, modify, or remove the contents of the Application at any time or for any reason at our sole discretion without notice. Nevertheless, we are under no obligation to update any information on our application. Additionally, we reserve the right to modify or discontinue all or part of the Application without notice at any time. We shall not be liable to you or any third party for any modifications, suspensions, or discontinuance of the Application.</string>
    <string name="weConnotGuarantee">We cannot guarantee the Application will be available at all times. We may experience hardware, software, or other problems or need to perform maintenance related to the Application, resulting in interruptions, delays, or errors. We reserve the right to change, revise, update, suspend, discontinue, or otherwise modify the Application at any time or for any reason without notice to you. You agree that we have no liability whatsoever for any loss, damage, or inconvenience caused by your inability to access or use the Application during any downtime or discontinuance of the Application. Nothing in these Terms of Use will be construed to obligate us to maintain and support the Application or to supply any corrections, updates, or releases in connection therewith.</string>
    <string name="userData">We will maintain certain data that you transmit to the Site for the purpose of managing the Site, as well as data relating to your use of the Site. Although we perform regular routine backups of data, you are solely responsible for all data that you transmit or that relates to any activity you have undertaken using the Site. You agree that we shall have no liability to you for any loss or corruption of any such data, and you hereby waive any right of action against us arising from any such loss or corruption of such data.</string>
    <string name="contactUs">In order to resolve a complaint regarding the Application or to receive further information regarding use of the Application, please email PangTourista@gmail.com</string>
    <string name="privacyNotice">This privacy notice for Pangasinan Tourism and Cultural Affairs Office (\"we,\" \"us,\" or \"our\"), describes how and why we might collect, store, use, and/or share (\"process\") your information when you use our services (\"Services\"), such as when you: \n\n ■ Download and use our mobile application (Pang Tourista), or any other application of ours that links to this privacy notice
\n\nQuestions or concerns? Reading this privacy notice will help you understand your privacy rights and choices. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at PangTourista@gmail.com.</string>
    <string name="summaryOfKeyPoint">This summary provides key points from our privacy notice, but you can find out more details about any of these topics by using our table of contents below.\n\nWhat personal information do we process? When you visit, use, or navigate our Services, we may process personal information depending on how you interact with us and the Services, the choices you make, and the features you use.</string>
    <string name="processAnySensitivePersonalInfo">Do we process any sensitive personal information? We do not process sensitive personal information.</string>
    <string name="receiveAnyInformationFromThirdParties">Do we receive any information from third parties? We do not receive any information from third parties.</string>
    <string name="howDoWeProcessYourInformation">How do we process your information? We process your information to provide, improve, and administer our Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process your information for other purposes with your consent. We process your information only when we have a valid legal reason to do so. "</string>
    <string name="howDoWeKeepYourInformationSafe">How do we keep your information safe? We have organizational and technical processes and procedures in place to protect your personal information. However, no electronic transmission over the internet or information storage technology can be guaranteed to be 100% secure, so we cannot promise or guarantee that hackers, cybercriminals, or other unauthorized third parties will not be able to defeat our security and improperly collect, access, steal, or modify your information.</string>
    <string name="whatAreYourRights">"What are your rights? Depending on where you are located geographically, the applicable privacy law may mean you have certain rights regarding your personal information. "</string>
    <string name="howDoYouExerciseYourRights">How do you exercise your rights? The easiest way to exercise your rights is by submitting a data subject access request, or by contacting us. We will consider and act upon any request in accordance with applicable data protection laws.</string>
    <string name="whatInformationDoWeCollect">Personal information you disclose to us\n\nIn Short: We gather the personal information you provide.\n\nWe collect personal information that you voluntarily provide to us when you register on the Services, express an interest in obtaining information about us or our Services, when you participate in activities on the Services, or otherwise when you contact us.\n\nPersonal Information Provided by You. The personal information that we collect depends on the context of your interactions with us and the Services, the choices you make, and the features you use. The personal information we collect may include the following:\n\n■ names\n■ email addresses\n■ usernames\n■ passwords\n\nSensitive Information. We do not process sensitive information.\n\nApplication Data. If you use our application(s), we also may collect the following information if you choose to provide us with access or permission:\n\n■ Geolocation Information. We may request access or permission to track location-based information from your mobile device, either continuously or while you are using our mobile application(s), to provide certain location-based services. If you wish to change our access or permissions, you may do so in your devices settings.\n\nThis information is primarily needed to maintain the security and operation of our application(s), for troubleshooting, and for our internal analytics and reporting purposes.
All personal information that you provide to us must be true, complete, and accurate, and you must notify us of any changes to such personal information.
\n\nInformation automatically collected\n\nIn Short: Some information - such as your Internet Protocol (IP) address and/or browser and device characteristics—is collected automatically when you visit our Services.
We automatically collect certain information when you visit, use, or navigate the Services. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLS, device name, country, location, information about how and when you use our Services, and other technical information. This information is primarily needed to maintain the security and operation of our Services, and for our internal analytics and reporting purposes.
</string>
    <string name="theInformationWeCollectIncludes">■ Log and Usage Data. Log and usage data is service-related, diagnostic, usage, and performance information our servers automatically collect when you access or use our Services and which we record in log files. Depending on how you interact with us, this log data may include your IP address, device information, browser type, and settings and information about your activity in the Services (such as the date/time stamps associated with your usage, pages and files viewed, searches, and other actions you take such as which features you use), device event information (such as system activity, error reports (sometimes called \"crash dumps\"), and hardware settings).\n\n■Location Data. We collect location data such as information about your device\'s location, which can be either precise or imprecise. How much information we collect depends on the type and settings of the device you use to access the Services. For example, we may use GPS and other technologies to collect geolocation data that tells us your current location (based on your IP address). You can opt out of allowing us to collect this information either by refusing access to the information or by disabling your Location setting on your device. However, if you choose to opt out, you may not be able to use certain aspects of the Services.\n</string>
</resources>